Fixed add employee absent alignment issue

--- a/src/app/templates/modules/employee/components/employee-absence/employee-absence.component.scss
+++ b/src/app/templates/modules/employee/components/employee-absence/employee-absence.component.scss
@@ -60,3 +60,7 @@ button{
   color: $white;
   font-size: 20px;
 }
+
+#absent-box {
+  position:absolute; top:10px; z-index: 1;
+}
